k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mmux-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.middlewares: ""
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - mmux.ir
      secretName: mmux-tls-v2
  rules:
    - host: mmux.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mmux-service
                port:
                  number: 8080
